Fix: increase scrolled logo height to 68px to reduce blurriness

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -75,7 +75,7 @@
 }
 
 .site-header.is-scrolled .logo-img {
-	height: 64px;
+	height: 68px;
 }
 
 .site-header.is-scrolled .site-nav__cta {
